[workspace.package]
name = "rustpad"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "examples/dkvstore",
    "examples/rust-one-hour",
    "examples/chaos",
    "examples/smtpointers",
    "examples/rendezvous", "examples/wordecar",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
futures = "0.3.31"
libp2p = { version = "0.54.1", features = [
    "identify",
    "tokio",
    "dns",
    "kad",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "rendezvous",
    "ping",
] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
