[package]
name = "dkvstore"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true, features = [
    "tokio",
    "dns",
    "kad",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
