[package]
name = "rendezvous"
version.workspace = true
edition.workspace = true

[dependencies]
libp2p = { workspace = true, features = [
    "identify",
    "tokio",
    "dns",
    "kad",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "rendezvous",
    "ping",
] }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
